fixed navbar z-index, made pitch detect conform

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,6 +6,7 @@
     top: 0;
     background-color: lightgray;
     position: sticky;
+    z-index: 1000;
 }
 
 .navLeft {
